# omstu-bot

./: Cargo.toml
src/: bot.rs  group.rs  json_handler.rs  main.rs  request_handler.rs  schedule.rs  schedule_day.rs  subject.rs
