[package]
name = "omstu_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
tbot = "0.6"
tokio = { version = "1.12.0", features = ["full"] }
chrono = "0.4.19"
futures = "0.3"
serde_json = "1.0"
serde = "1.0.130"
url = "2.2.2"